tests/specs/ecosystem/kyiro/hono/0_1_1.test
kyiro/hono/0.1.1
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /deno_dist/context.ts:218:3
    | 
218 |   setLayout = (layout: Layout<PropsForRenderer & { Layout: Layout }>) => (this.layout = layout)
    |   ^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /deno_dist/context.ts:240:3
    | 
240 |   setRenderer = (renderer: Renderer) => {
    |   ^^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /deno_dist/request.ts:282:7
    | 
282 |   get url() {
    |       ^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /deno_dist/request.ts:296:7
    | 
296 |   get method() {
    |       ^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /deno_dist/utils/stream.ts:33:9
   | 
33 |   async write(input: Uint8Array | string) {
   |         ^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type of 'Promise<void>' or 'Promise<never>' to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /deno_dist/utils/stream.ts:45:9
   | 
45 |   async writeln(input: string) {
   |         ^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type of 'Promise<void>' or 'Promise<never>' to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /deno_dist/utils/stream.ts:50:3
   | 
50 |   sleep(ms: number) {
   |   ^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /deno_dist/utils/filepath.ts:27:14
   | 
27 | export const getFilePathWithoutDefaultDocument = (
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /deno_dist/utils/crypto.ts:8:14
  | 
8 | export const sha256 = async (data: Data) => {
  |              ^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type of 'Promise<void>' or 'Promise<never>' to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /deno_dist/utils/crypto.ts:14:14
   | 
14 | export const sha1 = async (data: Data) => {
   |              ^^^^ this function is missing an explicit return type
   = hint: add an explicit return type of 'Promise<void>' or 'Promise<never>' to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /deno_dist/utils/crypto.ts:20:14
   | 
20 | export const md5 = async (data: Data) => {
   |              ^^^ this function is missing an explicit return type
   = hint: add an explicit return type of 'Promise<void>' or 'Promise<never>' to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /deno_dist/utils/buffer.ts:3:14
  | 
3 | export const equal = (a: ArrayBuffer, b: ArrayBuffer) => {
  |              ^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /deno_dist/utils/buffer.ts:24:14
   | 
24 | export const timingSafeEqual = async (
   |              ^^^^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type of 'Promise<void>' or 'Promise<never>' to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /deno_dist/utils/buffer.ts:51:14
   | 
51 | export const bufferToFormData = (arrayBuffer: ArrayBuffer, contentType: string) => {
   |              ^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /deno_dist/router/smart-router/router.ts:62:7
   | 
62 |   get activeRouter() {
   |       ^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[unsupported-super-class-expr]: super class expression was too complex
  --> /deno_dist/hono-base.ts:96:11
   | 
96 | > extends defineDynamicClass()<E, S, BasePath> {
   |           ^^^^^^^^^^^^^^^^^^^^ this is the superclass expression
   = hint: extract the superclass expression into a variable

  info: fast check was unable to infer the type of the superclass expression
  docs: https://jsr.io/go/slow-type-unsupported-super-class-expr


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /deno_dist/hono-base.ts:236:3
    | 
236 |   onError = (handler: ErrorHandler<E>) => {
    |   ^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /deno_dist/hono-base.ts:250:3
    | 
250 |   notFound = (handler: NotFoundHandler<E>) => {
    |   ^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /deno_dist/hono-base.ts:374:3
    | 
374 |   fetch = (request: Request, Env?: E['Bindings'] | {}, executionCtx?: ExecutionContext) => {
    |   ^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /deno_dist/hono-base.ts:390:3
    | 
390 |   request = (
    |   ^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /deno_dist/hono-base.ts:415:3
    | 
415 |   fire = () => {
    |   ^^^^ this function is missing an explicit return type
    = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /deno_dist/helper/testing/index.ts:9:14
  | 
9 | export const testClient = <T extends Hono<any, any, any>>(
  |              ^^^^^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /deno_dist/helper/streaming/sse.ts:45:14
   | 
45 | export const streamSSE = (
   |              ^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-type]: missing explicit type in the public API
 --> /deno_dist/helper/ssg/index.ts:9:14
  | 
9 | export const SSG_DISABLED_RESPONSE = new Response('SSG is disabled', { status: 404 })
  |              ^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
  = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /deno_dist/helper/factory/index.ts:212:14
    | 
212 | export const createFactory = <E extends Env = any, P extends string = any>() => new Factory<E, P>()
    |              ^^^^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /deno_dist/helper/factory/index.ts:214:14
    | 
214 | export const createMiddleware = <E extends Env = any, P extends string = any, I extends Input = {}>(
    |              ^^^^^^^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /deno_dist/helper/dev/index.ts:33:14
   | 
33 | export const showRoutes = <E extends Env>(hono: Hono<E>, opts?: ShowRoutesOptions) => {
   |              ^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /deno_dist/helper/dev/index.ts:79:14
   | 
79 | export const getRouterName = <E extends Env>(app: Hono<E>) => {
   |              ^^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /deno_dist/helper/accepts/accepts.ts:64:14
   | 
64 | export const accepts = (c: Context, options: acceptsOptions) => {
   |              ^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


